force-app/main/default/objects/Mass_User_Deactivation_Settings__mdt/Mass_User_Deactivation_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata settings to store the mass user deactivation settings</description>
    <label>Mass User Deactivation Settings</label>
    <pluralLabel>Mass User Deactivation Settings</pluralLabel>
</CustomObject>