force-app/main/default/objects/Mass_User_Deactivation_Settings__mdt/fields/batchSize__c.field-meta.xml
<CustomField>
    <fullName>batchSize__c</fullName>
    <label>batchSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>