force-app/main/default/objects/Mass_User_Deactivation_Settings__mdt/fields/Exclude_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Created_Date__c</fullName>
    <description>Field to capture the recent number of days in which the user might have created and that needs to be excluded for deactivation.</description>
    <label>Exclude Created Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>