force-app/main/default/objects/Mass_User_Deactivation_Settings__mdt/fields/Excluded_Last_Names__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Last_Names__c</fullName>
    <description>Field to store the last names which needs to be excluded for Mass User Deactivation</description>
    <label>Excluded Last Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>