force-app/main/default/objects/Mass_User_Deactivation_Settings__mdt/fields/Excluded_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Profiles__c</fullName>
    <description>Field to store the Profiles which needs to be excluded for Mass User Deactivation</description>
    <label>Excluded Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>