force-app/main/default/objects/Mass_User_Deactivation_Settings__mdt/fields/Excluded_User_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Excluded_User_Licenses__c</fullName>
    <label>Excluded User Licenses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>