force-app/main/default/objects/Mass_User_Deactivation_Settings__mdt/fields/Excluded_Usernames__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Usernames__c</fullName>
    <description>Field to store the Usernames which needs to be excluded for Mass User Deactivation.</description>
    <label>Excluded Usernames</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>