force-app/main/default/objects/Mass_User_Deactivation_Settings__mdt/fields/PermissionSetsName__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetsName__c</fullName>
    <description>Field will include all the permission set names with comma separated that will be used while deactivating the user</description>
    <label>PermissionSetsName</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>