force-app/main/default/objects/Mass_User_Deactivation_Settings__mdt/fields/Send_Email_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_To__c</fullName>
    <label>Send Email To</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>