force-app/main/default/objects/Mass_User_Deactivation_Settings__mdt/fields/User_Inactive_Days__c.field-meta.xml
<CustomField>
    <fullName>User_Inactive_Days__c</fullName>
    <label>User Inactive Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>